test/typecheck/bad-select-cond.txt
;;; TOOL: wat2wasm
;;; ERROR: 1
(module
  (func (result i32)
    f32.const 0
    i32.const 0
    i32.const 0
    select))
(;; STDERR ;;;
out/test/typecheck/bad-select-cond.txt:8:5: error: type mismatch in select, expected [i32, i32, i32] but got [f32, i32, i32]
    select))
    ^^^^^^
;;; STDERR ;;)
